--- a/style.css
+++ b/style.css
@@ -922,7 +922,7 @@ body {
     padding-top: 80px;
     text-align: center;
     background: linear-gradient(rgba(10, 10, 10, 0.75), rgba(10, 10, 10, 0.8)), 
-                url('https://images.unsplash.com/photo-1587202372634-32705e3bf49c') center/cover no-repeat;
+                url('./asserts/image.png') center/cover no-repeat;
 }
 
 .circuit-background {
@@ -1327,6 +1327,14 @@ body {
     margin-bottom: 1.5rem;
 }
 
+.form-group select option {
+  margin: 40px;
+    /* background: rgba(255, 255, 255, 0.05); */
+  background: rgb(35, 35, 50,1);
+  color: #fff;
+  /* text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); */
+}
+
 .form-input {
     width: 100%;
     padding: 1rem;
@@ -1390,8 +1398,8 @@ textarea.form-input {
 
 /* Page Navigation Styles */
 .page-content {
-    min-height: 100vh;
-    padding-top: 80px;
+    margin-bottom: 40px;
+    padding-top: 50px;
     background: #0a0a0a;
 }
 
@@ -1402,6 +1410,7 @@ textarea.form-input {
     text-align: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     position: relative;
+    margin-bottom: 40px;
 }
 
 .back-button {
